送样委托模块，完成删除和设置全否功能

--- a/TenderInfo/Views/SampleDelegation/SearchInfo.cshtml
+++ b/TenderInfo/Views/SampleDelegation/SearchInfo.cshtml
@@ -17,9 +17,11 @@
                 <label for="ddlSampleDelegationStateSearch">进度：</label>
                 <select id="ddlSampleDelegationStateSearch" class="form-control">
                     <option value="" selected>全部</option>
-                    <option value="一次编码表上传完成">一次编码表完成</option>
-                    <option value="二次编码表上传完成">二次编码表完成</option>
-                    <option value="检验报告上传完成">检验报告完成</option>
+                    <option value="技术要求录入">技术要求录入</option>
+                    <option value="质检接收审核">质检接收审核</option>
+                    <option value="质检接收回退">质检接收回退</option>
+                    <option value="质检领导确认">质检领导确认</option>
+                    <option value="检验报告上传">检验报告上传</option>
                 </select>
             </div>
             <div class="form-group">
